Added domain/hostedZones apis, Added dns records apis,Added validations for the same, Updated swagger docs
